[package]
authors = ["knight42 <anonymousknight96@gmail.com>"]
name = "yuki_cli"
repository = "https://github.com/knight42/Yuki-cli"
version = "0.1.0"
[badges.travis-ci]
branch = "master"
repository = "knight42/Yuki-cli"

[dependencies]
clap = "2.26.2"
failure = "0.1.1"
failure_derive = "0.1.1"
reqwest = "0.8.0"
rpassword = "2.0.0"
serde = "1.0.27"
serde_derive = "1.0.15"
serde_json = "1.0.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"
