[package]
authors = ["knight42 <anonymousknight96@gmail.com>"]
name = "yuki_cli"
repository = "https://github.com/ustclug/Yuki-cli"
version = "0.1.4"

[badges.travis-ci]
branch = "master"
repository = "ustclug/Yuki-cli"

[[bin]]
name = "yuki"
path = "src/main.rs"

[dependencies]
clap = "2.26.2"
failure = "0.1.1"
failure_derive = "0.1.1"
reqwest = "0.8.0"
rpassword = "2.0.0"
serde = "1.0.27"
serde_derive = "1.0.15"
serde_json = "1.0.3"
dirs = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"
